--- a/hubungisaya.html
+++ b/hubungisaya.html
@@ -44,11 +44,12 @@
               <p>UR GENDER PLEASE : <input type="radio" name="GENDER" value="ASAM BOI">Lelaki 
                             <input type="radio" name="GENDER" value="ASAM GIRL">Perempuan
               </p>
-              <p>KURSUS : <input type="checkbox" name="kursus_1" value="Memasak">Memasak
-                          <input type="checkbox" name="kursus_2" value="Menjahit">Menjahit
-                          <input type="checkbox" name="kursus_3" value="Komputer">Komputer 
+              <p>UR MOM TYPE : <input type="checkbox" name="kursus_1" value="TALL">TALL
+                          <input type="checkbox" name="kursus_2" value="SHORT">SHORT
+                          <input type="checkbox" name="kursus_3" value="FAT">FAT
+                          <input type="checkbox" name="kursus_4" value="THIN">THIN
               </p>
-              <p>NEGERI : <select name="THE AMOUNT AWESOMENESS">
+              <p>THE AMOUNT OF AWESOMENESS : <select name="THE AMOUNT AWESOMENESS">
                             <option>10%</option>
                             <option>20%</option>
                             <option>30%</option>
@@ -56,7 +57,7 @@
                             <option>69%</option>
                           </select>
               </p>
-              <p>MESEJ : <textarea cols="50" rows="5" name="mesej"></textarea></p>
+              <p>MESSAGE : <textarea cols="50" rows="5" name="mesej"></textarea></p>
               <p>
                 <input type="submit" name ="kau ni xde keje lain ke">
                 &nbsp;
