--- a/hubungisaya.html
+++ b/hubungisaya.html
@@ -41,8 +41,8 @@
             <form>
               <p>NAME : <input type="text" name="name"></p>
               <p>isMAIL : <input type="email" name="ISmail"></p>
-              <p>UR GENDER PLEASE : <input type="radio" name="GENDER" value="ASAM BOI">Lelaki 
-                            <input type="radio" name="GENDER" value="ASAM GIRL">Perempuan
+              <p>UR GENDER PLEASE : <input type="radio" name="GENDER" value="ASAM BOI">ASAM BOY
+                            <input type="radio" name="GENDER" value="ASAM GIRL">ASAM GIRL
               </p>
               <p>UR MOM TYPE : <input type="checkbox" name="kursus_1" value="TALL">TALL
                           <input type="checkbox" name="kursus_2" value="SHORT">SHORT
@@ -59,9 +59,9 @@
               </p>
               <p>MESSAGE : <textarea cols="50" rows="5" name="mesej"></textarea></p>
               <p>
-                <input type="submit" name ="kau ni xde keje lain ke">
+                <input type="submit" name ="kau ni xde keje lain ke" >
                 &nbsp;
-                <input type="reset" name="xyah nak tekan ni">
+                <input type="reset" name="xyah nak tekan ni" value="xyah nak tekan ni">
               </p>
             </form>
           </td>
