--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     
  <body>
    <center>
+     <marquee>
+     <img src="images/">
+     </marquee>
      
      <table width="75%" border="2">
        <tr>
