--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body>
    <center>
      <marquee>
-     <img src="images/">
+     <img src="images/BETMEN.jpeg">
      </marquee>
      
      <table width="75%" border="2">
