--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>ur momma</title>  
   </head>   
     
- <body>
+ <body><center>
      <table width="75%" border="2">
        <tr>
          <th width="20%"><img src="images/kvpjb.png" width="100%"></th>
@@ -44,6 +44,7 @@
        <tr>
          <th>&#169;WEYH ACAP MARILAH KVPJB</th>
        </tr>
+        </center>
      </table> 
     
    </center>
