--- a/hubungisaya.html
+++ b/hubungisaya.html
@@ -34,7 +34,7 @@
         <tr>
           <td align="center">
             <marquee>
-            <img src="images/frog.gif">
+            <img src="images/SPEDERMAN.jpeg">
             </marquee>
             <br>
             
