--- a/tentangsaya.html
+++ b/tentangsaya.html
@@ -34,7 +34,7 @@
         <table width="75%">                 
          <tr>
            <td width="25%">
-             <img src="images/" width="100%">
+             <img src="images/SQUIDWARD.jpeg" width="100%">
             </td>
            <td>
              <b>AMBITION</b>
