--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <body><center>
      <table width="75%" border="2">
        <tr>
-         <th width="20%"><img src="images/AVENGERS.jpeg" width="100%"></th>
+         <th width="20%"><img src="images/AVENGERS.jpg" width="100%"></th>
          <th><font size="50%">SKRT SKRT</font></th>
        </tr>
      </table>
