--- a/tentangsaya.html
+++ b/tentangsaya.html
@@ -8,7 +8,7 @@
      
      <table width="75%" border="2%">
        <tr>
-         <th width="20%"><img src="images/AVENGERS.jpeg" width="100%"></th>
+         <th width="20%"><img src="images/AVENGERS.jpg" width="100%"></th>
          <th><font size="50%">YEEEEHOWWW</font></th>
        </tr>
      </table>
@@ -44,18 +44,18 @@
               <li>NAK JUGAK EH BACA LAGI,PUKUL KAU</li>
              </ul>
              <b>Hobby</b>
-             <ol>
+             <ul>
                <li>HITTING THA GYM</li>
                <li>PLAYIN THA BADMINTON</li>
                <li>EHHHHH GAMING LA </li>
-             </ol>
+             </ul>
                 <b>My Awesomeness</b>
-           <dl>
-             <dt>NGL GOT A GREAT BODY</dt>
-             <dd>I LIKE THA GYM</dd>
-             <dt>IM KINDA TALL</dt>
+           <ul>
+             <li>NGL GOT A GREAT BODY</li>
+             <li>I LIKE THA GYM</li>
+             <li>IM KINDA TALL</li>
              <dd>Sebab saya selalu main bar</dd>
-           </dl>
+           </ul>
            </td>
            </tr>
           </table>
