--- a/tentangsaya.html
+++ b/tentangsaya.html
@@ -34,8 +34,10 @@
         <table width="75%">                 
          <tr>
            <td width="25%">
+             <marquee direction="up">
              <img src="images/SQUIDWARD.jpeg" width="100%">
-            </td>
+             </marquee>      
+           </td>
            <td>
              <b>AMBITION</b>
             <ul>
